// $Id$

CHANGELOG for Media module.
===========================

#692618 by aaron: Begin framework to allow library paging.
#697106 by aaron: Allow modules to define & alter default streams & conditions.
#697106 by aaron: Send default conditions & streams to browser library.
#697106 by aaron: Filter fid's on conditions when filtering on stream.
#697106 by aaron: Begin support for stream filter to media_browser_list().
#694520 by aaron: check for !isset($default) in media_variable_get().
#694520 by aaron: Remove all media namespace variables on uninstall.
#694520 by aaron: Add media_variable_del().
#694520 by aaron: Remove use of &drupal_static() for the variable defaults.
#694520 by aaron: Allow media_variable_default() to return all variables.
#694520 by aaron: Use &drupal_static() for the variable defaults.
#694520 by aaron: Document the variable namespace registry.
#692786 by aaron: Prefill description in browser file selector.
#692592 by aaron: Add AJAX preview for media from url.
#692592 by aaron: Add media-add_from_url.js.
#692592 by aaron: Begin preview for from url form.
#692592 by aaron: Allow stream wrappers to validate & parse url's.
#692592 by aaron: Add hook_media_parse.
by aaron: Rename the Media module.
by aaron: Remove the media_emfield module.
by aaron: Add a wysiwyg flag to filter for youtube & the like.
by aaron: Add cache_media_xml table to schema.
by aaron: Add media_retrieve_xml().
by aaron: Allow for WYSIWYG attribute overrides.
by aaron: t('Format') in media_format_form().
by aaron: Change _parse_url in MediaReadOnlyStreamWrapper to explode on ://.
#671744 by aaron: Fix redirect after uploading new media from content admin.
#671744 by aaron: Fix error when uploading new media from media content admin.
#673998 by aaron: Fix typo (s/view/video).
#673998 by aaron: Move media type defs to hook_enable.
#678588 by aaron: Fix undefined index error on node view.
by aaron: Use the currently undocumented #attached property to load js & css.