@@ -3,6 +3,7 @@
 CHANGELOG for Media module.
 ===========================
 
+by aaron: Add an empty message when there are no media.
 #692618 by aaron: Begin framework to allow library paging.
 #697106 by aaron: Allow modules to define & alter default streams & conditions.
 #697106 by aaron: Send default conditions & streams to browser library.
